Add style and image

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 
 <body>
     <main>
-        <h1>ROMAN NUMERAL CONVERTER</h1>
+
         <div class="input-container">
-            <label for="number">Enter a Number</label>
+            <h2>ROMAN NUMERAL CONVERTER</h2>
+            <label for="number">Enter a Number:</label>
             <input type="number" name="number" id="number">
-            <button id="convert-btn"></button>
+            <button id="convert-btn">Convert!</button>
         </div>
     </main>
 </body>
