Add script and eventHandler function

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <input type="number" name="number" id="number">
             <button id="convert-btn">Convert!</button>
         </div>
+        <div id="output">
+
+        </div>
     </main>
 </body>
 <script src="script.js"></script>
